cmake_minimum_required(VERSION 3.24)
project(PiCS2)

set(CMAKE_CXX_STANDARD 17)

add_executable(PiCS2 main.cpp)
add_executable(Problem2.1 Problem2.1.cpp)
add_executable(Problem2.2 Problem2.2.cpp)
add_executable(Problem2.3 Problem2.3.cpp)
add_executable(Problem2.4 Problem2.4.cpp)
add_executable(Problem2.5 Problem2.5.cpp)
add_executable(Problem2.6 Problem2.6.cpp Problem2.6.1.cpp)
add_executable(Problem2.7 Problem2.7.cpp)
add_executable(Problem2.8 Problem2.8.cpp)